Fix spacing between Flock and brand

--- a/app/bin/css/style.css
+++ b/app/bin/css/style.css
@@ -8,5 +8,17 @@ body {
 }
 
 #navbar-brand {
+    padding: 15px;
+    margin-left: 0px;
+}
+
+#basic-nav-dropdown {
+    /*margin-right: 30px;*/
+
+}
+
+#navbar-items {
+    width: 45%;
+    margin: auto;
     text-align: center;
 }
